<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>shoebot_description</name>
    <version>0.0.0</version>
    <description>shoebot Description Package</description>
    shoebot<maintainer email="richardw347@gmail.com">Richard Williams</maintainer>
    <license>Apache 2.0</license>
    <url type="website">shoebot.org</url>
    <url type="repository">https://github.com/shoebot/shoebot</url>
    <url type="bugtracker">https://github.com/shoebot/shoebot/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
