<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>shoebot_gazebo</name>
    <version>0.0.0</version>
    <description>Shoebot Gazebo Package</description>
    <maintainer email="richardw347@gmail.com">Richard Williams</maintainer>
    <license>Apache 2.0</license>
    <url type="website">shoebot.org</url>
    <url type="repository">https://github.com/shoebot/url</url>
    <url type="bugtracker">https://github.com/shoebot/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <exec_depend>gazebo_ros_pkgs</exec_depend>
    <exec_depend>rclpy</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>